tests/ui/ast_external.stderr
error[E0505]: cannot move out of `body` because it is borrowed
  --> tests/ui/ast_external.rs:11:10
   |
9  |     let body = [];
   |         ---- binding `body` declared here
10 |     let ext = ast::external(&loc, atom1, &body, ExternalType::Free);
   |                                          ----- borrow of `body` occurs here
11 |     drop(body);
   |          ^^^^ move out of `body` occurs here
12 |     let _end = ext;
   |                --- borrow later used here
